<resources>
    <string name="app_name">EasyVote</string>
    <string name="easy_vote">EASY VOTE</string>
    <string name="register">Register</string>
    <string name="email">Email</string>
    <string name="safe_and_secure_voting">Safe and Secure Voting</string>
    <string name="login">login</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="password">Password</string>
    <string name="full_name">Full Name</string>
    <string name="age">Age</string>
    <string name="constituency">Constituency</string>
    <string name="register_user">REGISTER USER</string>
    <string name="logout">Logout</string>
    <string name="reset_password">RESET PASSWORD</string>
    <string name="admin_details">Admin Details</string>
    <string name="full_name1">Full Name:</string>
    <string name="age1">Age:</string>
    <string name="constituency1">Constituency:</string>
    <string name="email1">Email:</string>
    <string name="name">canName</string>
    <string name="party">party</string>
    <string name="location">location</string>
    <string name="voteBtn">Vote</string>
    <string name="textview">TextView</string>
    <string name="ConfirmVote">Button</string>
    <string name="confirm_vote">Confirm Vote</string>
    <string name="button">Button</string>
    <string name="vote_details">Vote Details</string>
    <string name="view_voters">View Voters</string>
    <string name="update_voters">Update Voters</string>
    <string name="view_candidates">View Candidates</string>
    <string name="update_candidate">Update Candidate</string>
    <string name="fullname">name</string>
    <string name="ExportList">Button</string>
    <string name="export_list">Export List</string>
    <string name="update_details">Update Details</string>
    <string name="email_cannot_be_updated">Email cannot be updated</string>
    <string name="enter_age">Enter Age</string>
    <string name="enter_address">Enter Address</string>
    <string name="enter_full_name">Enter Full Name</string>
    <string name="enter_name">Enter Name</string>
    <string name="voter_details">Voter Details</string>
    <string name="email_cannot_be_updated_register_again_with_new_email">Email cannot be updated, register again with new email.</string>
    <string name="update_voter_details">Update Voter Details</string>
    <string name="add_a_candidate">Add a Candidate</string>
    <string name="candidate_full_name">Candidate Full Name</string>
    <string name="candidate_party">Candidate Party</string>
    <string name="candidate_location">Candidate Location</string>
    <string name="add_new_candidate">Add New Candidate</string>
    <string name="todo">TODO</string>
    <string name="view_candidate_votes">View Candidate Votes</string>
    <string name="update_vote_count">Update Vote Count</string>
    <string name="vote">Vote</string>
    <string name="delete_voter">Delete Voter</string>
    <string name="register_voter">Register Voter</string>
    <string name="address">Address</string>
    <string name="addressA">Address:</string>
</resources>