<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ForgotPassword">

    <TextView
        android:id="@+id/banner"
        android:layout_width="420dp"
        android:layout_height="85dp"
        android:background="#16931B"
        android:fontFamily="sans-serif-black"
        android:gravity="center"
        android:text="@string/easy_vote"
        android:textColor="#090808"
        android:textSize="60sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.049" />

    <EditText
        android:id="@+id/emailRst"
        android:layout_width="320dp"
        android:layout_height="55dp"
        android:layout_marginTop="40dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="@id/resetPasswordBtn"
        app:layout_constraintStart_toStartOf="@id/resetPasswordBtn"
        app:layout_constraintTop_toBottomOf="@+id/banner" />

    <Button
        android:id="@+id/resetPasswordBtn"
        android:layout_width="320dp"
        android:layout_height="56dp"
        android:layout_marginStart="40dp"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="26dp"
        android:layout_marginEnd="40dp"
        android:layout_marginRight="40dp"
        android:background="#16931B"
        android:fontFamily="sans-serif-black"
        android:text="@string/reset_password"
        android:textColor="#090808"
        app:backgroundTint="#16931B"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emailRst"
        app:layout_constraintVertical_bias="0.0" />


</androidx.constraintlayout.widget.ConstraintLayout>