<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProfileActivity">

    <Button
        android:id="@+id/signOut"
        android:layout_width="96dp"
        android:layout_height="50dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="36dp"
        android:layout_marginRight="36dp"
        android:text="@string/logout"
        android:textColor="#FBFBFB"
        app:backgroundTint="#716E6E"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email_DB"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/banner"
        android:layout_width="414dp"
        android:layout_height="82dp"
        android:layout_marginTop="24dp"
        android:background="#16931B"
        android:fontFamily="sans-serif-black"
        android:gravity="center"
        android:text="@string/easy_vote"
        android:textColor="#090808"
        android:textSize="60sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.666"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/fullName_User"
        android:layout_width="90dp"
        android:layout_height="45dp"
        android:layout_marginStart="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="20dp"
        android:gravity="center|left"
        android:text="@string/full_name1"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/banner" />

    <TextView
        android:id="@+id/email_User"
        android:layout_width="90dp"
        android:layout_height="45dp"
        android:layout_marginStart="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="16dp"
        android:gravity="center|left"
        android:text="@string/email1"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/const_DB" />

    <TextView
        android:id="@+id/age_User"
        android:layout_width="90dp"
        android:layout_height="45dp"
        android:layout_marginStart="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="16dp"
        android:gravity="center|left"
        android:text="@string/age1"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fullName_User" />

    <TextView
        android:id="@+id/age_DB"
        android:layout_width="270dp"
        android:layout_height="45dp"
        android:layout_marginTop="16dp"
        android:gravity="center|left"
        android:textColor="#090808"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/age_User"
        app:layout_constraintTop_toBottomOf="@+id/fullName_DB" />

    <TextView
        android:id="@+id/const_User"
        android:layout_width="90dp"
        android:layout_height="45dp"
        android:layout_marginStart="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="16dp"
        android:gravity="center|left"
        android:text="Address:"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/age_DB" />

    <TextView
        android:id="@+id/const_DB"
        android:layout_width="270dp"
        android:layout_height="45dp"
        android:layout_marginTop="16dp"
        android:gravity="center|left"
        android:textColor="#090808"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/const_User"
        app:layout_constraintTop_toBottomOf="@+id/age_DB" />

    <TextView
        android:id="@+id/fullName_DB"
        android:layout_width="270dp"
        android:layout_height="45dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:gravity="center|left"
        android:textColor="#090808"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/fullName_User"
        app:layout_constraintTop_toBottomOf="@+id/banner" />

    <TextView
        android:id="@+id/email_DB"
        android:layout_width="270dp"
        android:layout_height="45dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:gravity="center|left"
        android:textColor="#090808"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/email_User"
        app:layout_constraintTop_toBottomOf="@+id/const_DB" />

    <Button
        android:id="@+id/buttonVoteDetails"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_marginStart="36dp"
        android:layout_marginLeft="36dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        android:text="@string/vote"
        android:textColor="#FBFBFB"
        app:backgroundTint="#716E6E"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/signOut"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email_DB"
        app:layout_constraintVertical_bias="0.0" />

</androidx.constraintlayout.widget.ConstraintLayout>