<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UpdateVoterDetails">

    <TextView
        android:id="@+id/emailUpdate"
        android:layout_width="320dp"
        android:layout_height="35dp"
        android:layout_marginTop="16dp"
        android:background="#ECEFF1"
        android:textSize="12sp"
        android:gravity="center|left"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ageUpdate" />

    <Button
        android:id="@+id/updateDet"
        android:layout_width="226dp"
        android:layout_height="45dp"
        android:layout_marginTop="16dp"
        android:text="@string/update_details"
        android:textColor="#FBFBFB"
        app:backgroundTint="#716E6E"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewEmail" />

    <TextView
        android:id="@+id/fullNameUpdate"
        android:layout_width="320dp"
        android:layout_height="35dp"
        android:layout_marginTop="15dp"
        android:background="#ECEFF1"
        android:textSize="12sp"
        android:gravity="center|left"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/addressUpdate"
        android:layout_width="320dp"
        android:layout_height="35dp"
        android:layout_marginTop="16dp"
        android:background="#ECEFF1"
        android:textSize="12sp"
        android:gravity="center|left"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fullNameUpdate" />

    <TextView
        android:id="@+id/ageUpdate"
        android:layout_width="320dp"
        android:layout_height="35dp"
        android:layout_marginTop="16dp"
        android:background="#ECEFF1"
        android:textSize="12sp"
        android:gravity="center|left"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addressUpdate" />

    <TextView
        android:id="@+id/updateDetail_Text"
        android:layout_width="320dp"
        android:layout_height="45dp"
        android:layout_marginTop="20dp"
        android:autofillHints=""
        android:ems="10"
        android:gravity="center"
        android:inputType="textPersonName"
        android:text="@string/update_details"
        android:textColor="#090808"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@id/fullNameUpdate"
        app:layout_constraintHorizontal_bias="0.567"
        app:layout_constraintStart_toStartOf="@id/fullNameUpdate"
        app:layout_constraintTop_toBottomOf="@+id/emailUpdate" />

    <EditText
        android:id="@+id/enterFullNameUpdate"
        android:layout_width="320dp"
        android:layout_height="40dp"
        android:layout_marginTop="16dp"
        android:autofillHints=""
        android:background="#ECEFF1"
        android:ems="10"
        android:hint="@string/enter_full_name"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/updateDetail_Text" />

    <EditText
        android:id="@+id/enterAddressUpdate"
        android:layout_width="320dp"
        android:layout_height="43dp"
        android:layout_marginTop="16dp"
        android:autofillHints=""
        android:background="#ECEFF1"
        android:ems="10"
        android:hint="@string/enter_address"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/enterFullNameUpdate" />

    <EditText
        android:id="@+id/enterAgeUpdate"
        android:layout_width="320dp"
        android:layout_height="35dp"
        android:layout_marginTop="16dp"
        android:autofillHints=""
        android:background="#ECEFF1"
        android:ems="10"
        android:hint="@string/enter_age"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/enterAddressUpdate" />

    <TextView
        android:id="@+id/textViewEmail"
        android:layout_width="320dp"
        android:layout_height="40dp"
        android:layout_marginTop="16dp"
        android:background="#ECEFF1"
        android:gravity="center"
        android:text="@string/email_cannot_be_updated_register_again_with_new_email"
        android:textColor="#090808"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/enterAgeUpdate" />

</androidx.constraintlayout.widget.ConstraintLayout>